[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "media_tools"
version = "0.1.0"
description = ""
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "music_tag",
]

[tool.setuptools]
packages = [
    "fix_music_tags",
    "metadata", 
    "tag_utils"
]